Finally make the Captcha Filter into an option I'm fairly certain I've "fixed" the invisible captcha issue, but for whatever reason, someone might just not want a filter.

--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1586,10 +1586,11 @@ input:checked + .rice {
 .textarea-resize-none #qr textarea {
   resize: none;
 }
-.captcha-img {
+.captcha-img div {
   margin: 1px 0 0;
   text-align: center;
   line-height: 0;
+  background-color: #fff;
 }
 .captcha-img img {
   width: 246px;
